--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.data.mongodb.uri=mongodb://sahil:12345s@ds163014.mlab.com:63014/molbhaav-order
-server.port=8082
-
-Spring.mail.host=smtp.gmail.com
-Spring.mail.username= molbhaav@gmail.com
-Spring.mail.password= molbhaav123
-Spring.mail.port=587
-Spring.mail.properties.mail.smtp.starttls.enable=true
+#server.port=8082
+#
+#Spring.mail.host=smtp.gmail.com
+#Spring.mail.username= molbhaav@gmail.com
+#Spring.mail.password= molbhaav123
+#Spring.mail.port=587
+#Spring.mail.properties.mail.smtp.starttls.enable=true
