--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.data.mongodb.uri=mongodb://sahil:12345s@ds163014.mlab.com:63014/molbhaav-order
-server.port=8082
+#server.port=8082
+
 #
 #Spring.mail.host=smtp.gmail.com
 #Spring.mail.username= molbhaav@gmail.com
